# Encrytion-Api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  errors.rs  main.rs
src/handlers/: decrypt_handler.rs  encrypt_handler.rs  mod.rs
src/models/: decrypt_request.rs  decrypt_response.rs  encrypt_decrypt.rs  encrypt_request.rs  encrypt_response.rs
src/services/: decryption.rs  encryption.rs
src/tests/: integration_tests.rs
