[package]
name = "secure_encryption_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
aes-gcm = "0.10.1"
base64 = "0.13.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
utoipa = "2"
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }