[package]
name = "secure_encryption_api"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
utoipa = "2"
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
flate2 = "1.0" # Compression
thiserror = "1.0"
